--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Github Package</name>
+            <url>https://maven.pkg.github.com/lucasoliveira04/manager-sdk</url>
+        </repository>
+    </distributionManagement>
 </project>
