--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,13 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
-name: Publish SDK to Github Packages
+name: Publish SDK to GitHub Packages
 
 on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
@@ -39,4 +40,4 @@ jobs:
           EOF
 
       - name: Build and publish package
-        run: mvn clean deploy
+        run: mvn -B clean deploy
